Refactor DeckOfCards and Game classes; implement playCardsOnRow method; add player turn execution logic; update exception handling and package structure
Co-authored-by: Copilot <copilot@github.com>